# wildlife-monitoring-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: airtable_logger.py  classifier.py  config.py  detector.py  metadata.py  pipeline.py
src/wildlife_monitoring/: __init__.py  classifier.py  cli.py  config.py  organizer.py  pipeline.py  preprocess.py
tests/: test_organizer.py  test_pipeline.py
