[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildlife-monitoring-pipeline"
version = "0.1.0"
description = "Camera trap wildlife classification and file organization pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
]

[project.scripts]
wildlife-pipeline = "wildlife_monitoring.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
